# mcp-server

./: Dockerfile  README.md  flake.nix  pyproject.toml
nix/: module.nix
src/mcp_server/: __init__.py  main.py
src/mcp_server/core/: app.py
src/mcp_server/services/courses/: app.py
src/mcp_server/services/eats/: app.py  constants.py  models.py  utils.py
src/mcp_server/services/maps/: app.py
