[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Parinthapat Pengpun", email = "parinzee@protonmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mcp-server = "mcp_server:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
